--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.0/css/all.css">
     <title>Réservia</title>
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="NORMALIZE/normalize.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
@@ -66,15 +66,15 @@
                 <ul id="filtres">
                     <li class="filtres-list"><span class="circles"><i class="fas fa-money-bill-wave icone">
                             </i></span><span class="filt-desc">
-                            Economique </span></li>
+                            <a href="index.html"> Economique</a> </span></li>
                     <li class="filtres-list"><span class="circles"><i class="fas fa-child icone"></i></span><span
-                            class="filt-desc"> Familial </span>
+                            class="filt-desc"> <a href="index.html"> Familial</a> </span>
                     </li>
                     <li class="filtres-list"><span class="circles"><i class="fas fa-heart icone"></i></span><span
-                            class="filt-desc"> Romantique </span>
+                            class="filt-desc">  <a href="index.html">Romantique </a></span>
                     </li>
                     <li class="filtres-list"><span class="circles"><i class="fas fa-dog icone"></i></span><span
-                            class="filt-desc"> Animaux
+                            class="filt-desc"> <a href="index.html"> Animaux</a>
                             autorisés </span>
                     </li>
                 </ul>
@@ -87,8 +87,8 @@
         </div>
     </section>
     <!---Hébergement-->
-    <div id="H-section">
-        <section id="ctr-populaires">
+    <main id="H-section">
+        <aside id="ctr-populaires">
             <div id="populaires-title">
                 <h2>Les plus populaires </h2>
                 <span class="logos">
@@ -101,6 +101,7 @@
                 <!--descritiptions des logements-->
                 <!--1-->
                 <div class="populaires-card-list" id="card-une">
+                   
                     <div class="div-img"><img src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
                             alt="Hôtel le soleil du matin"></div>
                     <div class="title">
@@ -108,15 +109,15 @@
                             <h5>Hôtel Le soleil du matin</h5>
                             <a href="#" class="prix-lnk">Nuit à partir de 128<span class="euro">€</span></a>
                         </div>
-
                         <div class="star">
+                            <a href="#">
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
+                            </a>
                         </div>
-
                     </div>
                 </div>
                 <!--2-->
@@ -129,11 +130,13 @@
                             <a href="#" class="prix-lnk">Nuit à partir de 71<span class="euro">€</span></a>
                         </div>
                         <div class="star">
+                            <a href="#">
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star greys"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -147,16 +150,18 @@
                             <a href="#" class="prix-lnk">Nuit à partir de 68<span class="euro">€</span></a>
                         </div>
                         <div class="star">
+                            <a href="#">
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star blues"></i>
                             <i class="fas fa-star greys"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
             </div>
-        </section>
+        </aside>
 
         <section id="hebergement">
             <!-- Hébergements à Marseille -->
@@ -169,11 +174,13 @@
                         <h3>Auberge la Cannebière</h3>
                         <a href="#" class="prix">Nuit à partir de <span class="euro">25€</span></a>
                         <div class="stars">
+                            <a href="#">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star grey"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -184,11 +191,13 @@
                         <h3>Hôtel du port</h3>
                         <a href="#" class="prix">Nuit à partir de 52<span class="euro">€</span></a>
                         <div class="stars">
+                            <a href="#">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -199,11 +208,13 @@
                         <h3>Hôtel les mouettes</h3>
                         <a href="#" class="prix">Nuit à partir de 76<span class="euro">€</span></a>
                         <div class="stars">
+                            <a href="#">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star grey"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -214,11 +225,13 @@
                         <h3>Hôtel de la mer</h3>
                         <a href="#" class="prix">Nuit à partir de 46<span class="euro">€</span></a>
                         <div class="stars">
+                            <a href="#">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star grey"></i>
                             <i class="fas fa-star grey"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -229,11 +242,13 @@
                         <h3>Auberge le panier</h3>
                         <a href="#" class="prix">Nuit à partir de <span class="euro">23€</span></a>
                         <div class="stars">
+                            <a href="#">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -245,11 +260,13 @@
                         <h3>Hôtel chez Amina</h3>
                         <a href="#" class="prix">Nuit à partir de 96<span class="euro">€</span></a>
                         <div class="stars">
+                            <a href="#">
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
                             <i class="fas fa-star blue"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -258,7 +275,7 @@
         </section>
 
 
-    </div>
+    </main>
     <!--Activités à Marseille-->
     <section id="Act-marseille">
         <div>
