modifications commentaires animations

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </header>
 
-
+    <!-- section composée du titre principal, d'une description de l'emplacement, un formulaire, des filtres et une informations supplémentaires -->
     <section id="section-head">
         <!--H1-->
         <h1>Trouvez votre Hébergement pour des vacances de rêve</h1>
@@ -86,7 +86,7 @@
             <p id="info-desc"> Plus de 500 logements sont disponibles dans cette ville</p>
         </div>
     </section>
-    <!---Hébergement-->
+    <!--- Section comprenant Hébergements à Marseille et les plus populaires-->
     <main id="H-section">
         <aside id="ctr-populaires">
             <div id="populaires-title">
@@ -276,7 +276,7 @@
 
 
     </main>
-    <!--Activités à Marseille-->
+    <!-- Section regroupant les Activités à Marseille-->
     <section id="Act-marseille">
         <div>
             <!--h2-->
